--- a/build.gradle
+++ b/build.gradle
@@ -27,6 +27,7 @@ dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-security'
 	implementation 'org.springframework.boot:spring-boot-starter-web'
 	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
+	compile 'org.jsoup:jsoup:1.12.1'
 	compile 'io.jsonwebtoken:jjwt-api:0.10.7'
 	runtime 'io.jsonwebtoken:jjwt-impl:0.10.7',
 	// Uncomment the next line if you want to use RSASSA-PSS (PS256, PS384, PS512) algorithms:
