--- a/build.gradle
+++ b/build.gradle
@@ -28,6 +28,11 @@ dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-web'
 	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
 	implementation 'org.modelmapper.extensions:modelmapper-spring:2.3.0'
+	implementation 'org.springframework.security:spring-security-acl'
+	implementation 'org.springframework.security:spring-security-config'
+	implementation 'org.springframework:spring-context-support'
+	implementation 'net.sf.ehcache:ehcache-core:2.6.11'
+	implementation 'com.acciente.oacc:acciente-oacc:2.0.0'
 	compile 'org.jsoup:jsoup:1.12.1'
 	compile 'io.jsonwebtoken:jjwt-api:0.10.7'
 	runtime 'io.jsonwebtoken:jjwt-impl:0.10.7',
